# sc-market-frontend

./: .env  .gitignore  ACCESSIBILITY_TESTING_GUIDE.md  ARCHITECTURE.md  BUBBLEWRAP_SETUP.md  BUNDLE_OPTIMIZATION.md  CRITICAL_CSS_RESOURCE_HINTS_SUMMARY.md  DATAGRID_OPTIMIZATION.md  DECOUPLING_PLAN.md  DEFERRED_LOADING_GUIDE.md  DIGITAL_ASSET_LINKS.md  MARKET_V2_COMPONENTS_TO_MIGRATE.md  MARKET_V2_MIGRATION_BLOCKERS.md  MARKET_V2_MIGRATION_COMPONENTS.md  MARKET_V2_MIGRATION_STATUS.md  MIGRATION_ANALYSIS.md  PREFETCH_IMPLEMENTATION.md  PWA_DEV_SETUP.md  README.md  REFACTORING_NOTES.md  ROUTE_SKELETONS.md  SKELETON_CONSISTENCY_FIX.md  SKELETON_IMPROVEMENTS_COMPLETED.md  TASK_12_COMPLETION_SUMMARY.md  TAURI_SETUP.md  TODO_SKELETON_IMPROVEMENTS.md  cyber-brutalist-concept.html  eslint.config.js  i18next-parser.config.cjs  i18next-parser.config.js  index.html  jest.config.cjs  manifest-checksum.txt  openapi-codegen.config.json  openapi-codegen.config.ts  package-lock.json  package.json  sc-market.openapi.json  tsconfig.json  twa-manifest.json  (+3 more)
.kiro/: chat1
dev-dist/: sw.js
docs/: ACCESSIBILITY_TESTING_GUIDE.md  CRITICAL_CSS_RESOURCE_HINTS_SUMMARY.md  DATAGRID_OPTIMIZATION.md  DEFERRED_LOADING_GUIDE.md  DetailPageLayout.md  FormPageLayout.md  MIGRATION_ANALYSIS.md  PREFETCH_IMPLEMENTATION.md  REFACTORING_NOTES.md  ROUTE_SKELETONS.md  SKELETON_CONSISTENCY_FIX.md  SKELETON_IMPROVEMENTS_COMPLETED.md  StandardPageLayout.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+1398 files in other folders)
