[package]
name = "sc-market"
version = "1.0.0"
description = "SC Market - Star Citizen Marketplace"
authors = ["henry232323"]
edition = "2021"

[lib]
name = "sc_market_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"
